...
    <string name="parse_app_id">l5qhJIZRq3vPDrHTmyzPu3z6IwMjukw7M3h9A8CZ</string>
    <string name="parse_client_key">iLgCs4Z7I71j1L9DIWrjwjkCZ02yc6KuDsYVO60e</string>
    <string name="facebook_app_id">1568762143375890</string>
    <string name="logoText">ME ME INN</string>

    <!-- Main Page Strings -->
    <string name="gotoVocab">Go To Vocabulary</string>
    <string name="gotoUserQuiz">Go To User-created quiz</string>
    <string name="matchFriend">Match with Friends</string>
    <string name="matchLadder">Match in Ladder</string>
    <string name="usernameHint">Username</string>
    <string name="passwordHint">Password</string>
    <string name="loginBtnText">Log In</string>
    <string name="gotoSignUpBtnText">Sign Up for ME ME INN</string>

    <!-- Chapter List Page Strings -->
...

    <string name="toQuiz">go to Quiz!</string>
    <string name="toMemo">Review</string>


    <!--Quiz Page Strings-->
    <string name="quizName">quiz!</string>
    <string name="readyq">ready to start?</string>
    <string name="questionQuiz">Choose the right meaning for: </string>
    <string name="testWord"> sample </string>
    <string name="meaning0">  sample meaning 0</string>
    <string name="meaning1">  sample meaning 1 </string>
    <string name="meaning2">  sample meaning 2 </string>
...
    <!--Profile Page Strings-->
    <string name="reviewBtnText">Review Vocabulary</string>
    <string name="rankBtnText">Ranking</string>
    <string name="friendBtnText">Friends</string>
    <string name="usernameText">Username</string>
    <string name="title_activity_review_finished_pop_up">ReviewFinishedPopUp</string>
    <string name="checkpost">Check Post</string>
    <string name="addpost">Add Post</string>
    <string name="logoutText">Log out</string>

    <!--Contest Page Strings-->
    <string name="contestType">GRE Contest!</string>
    <string name="user">userName</string>
    <string name="opponent">oppoName</string>
...

    <!--Friend Page Strings-->
    <string name="friendsText">My Friends</string>
    <string name="addfriendsText">Add Friends</string>

    <!--Post Question Page Strings-->
    <string name="submitpost">Submit</string>
    <string name="QuestionTitleHint">Input Question Title</string>
    <string name="QuestionOption1Hint">Input Option 1</string>
    <string name="QuestionOption2Hint">Input Option 2</string>
    <string name="QuestionOption3Hint">Input Option 3</string>
    <string name="QuestionOption4Hint">Input Option 4</string>

...
