...

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkpost"
        android:id="@+id/checknewpost"
        android:layout_below="@+id/friends"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="34dp"
        android:layout_marginStart="34dp"
        android:onClick="gotoCheckPost"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addpost"
        android:id="@+id/addnewpost"
        android:layout_alignTop="@+id/checknewpost"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="34dp"
        android:layout_marginEnd="34dp"
        android:onClick="gotoAddPost"/>
...
